# ChangeLog for perl-core/net-ping
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/net-ping/ChangeLog,v 1.9 2007/01/19 18:02:35 mcummings Exp $

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org> net-ping-2.31.ebuild:
  Ebuild maintenance

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org> net-ping-2.31.ebuild:
  Adding perl dep

  03 Dec 2005; Tom Gall <tgall@gentoo.org> net-ping-2.31.ebuild:
  stable on ppc64

  12 Nov 2005; Brent Baude <ranger@gentoo.org> net-ping-2.31.ebuild:
  Marking net-ping-2.31 ~ppc64 for bug# 112220

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> net-ping-2.31.ebuild:
  stable on ia64

  10 Jul 2005; Tom Martin <slarti@gentoo.org> net-ping-2.31.ebuild:
  Marked ~ia64.

*net-ping-2.31 (25 May 2005)

  25 May 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +net-ping-2.31.ebuild:
  dev-perl => perl-core migration

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org> net-ping-2.31.ebuild:
  Cleaning for mirror syntax

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  23 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> net-ping-2.31.ebuild:
  Stable amd64.

  09 Jul 2004; Michael Hanselmann <hansmi@gentoo.org> net-ping-2.31.ebuild:
  Stable on ppc.

  30 May 2004; Bryan Østergaard <kloeri@gentoo.org> net-ping-2.31.ebuild:
  Stable on alpha.

  30 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
  net-ping-2.31.ebuild:
  Tested on x86 and sparc, all pod tests worked fine

*net-ping-2.31 (11 Aug 2003)

  11 Aug 2003; Michael Cummings <mcummings@gentoo.org> net-ping-2.31.ebuild:
  Missing dependancy for net-mail/razor
