@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Net-Ping-2.31.tar.gz 33580 RMD160 10498ed917936d03100c43d9419a36f525226d04 SHA1 2ad069a47855193ceb2dcfa8927775d7d362fa42 SHA256 cea2fd27cc3ae8cb668f0ca513521b6ae14cd812203dca5eca0fd11f3fdc60e1
+DIST Net-Ping-2.35.tar.gz 28004 RMD160 85424631e5745764f91b0ab794fa67f43a24615c SHA1 b442470228d2d5e6b467a91f443e1eae7f2b0ef8 SHA256 be51253a6fd48735eeefac7d2ff980945f78d62338c35ff25881fa03981575b4
 EBUILD net-ping-2.31.ebuild 549 RMD160 ef539e785c271ff99785f97cea02649de1cd5721 SHA1 9097532be26b42edfd8db9b14102af1f585af5ba SHA256 e932874d43ad183057bdf96e562e1036d523be6f3470df6b3a5eae7b93e4c969
-MISC ChangeLog 1724 RMD160 095989c7c42f41851816cda3d12147ea60500343 SHA1 14a69ab55bb4991e52a6052ea5bed749c89b85a0 SHA256 bd3594ace03b36bd515f725d9d5338b4a5f7f63118f39999e130fc8b03c6a662
+EBUILD net-ping-2.35.ebuild 490 RMD160 94877c31ca37ea7aec229e2908c2b0ac9f87bff6 SHA1 8d9b1aa4c30eaeb5ade754a3b959cdfb757e7c07 SHA256 8515c64a36fba5a71c321a624708ff5c09ea90171b57d500515b9d33aecebd90
+MISC ChangeLog 1837 RMD160 6cd98b5f3412e2e9b4624d66fdfa744cd0b7cdf4 SHA1 d926d51644ac57a5f93bf26fdbd8c30526d35f76 SHA256 d7d829c35a87fca88a210bd6becc3f4d0d59f863240597f0abc4040750d2dcde
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkjwZ58ACgkQV3J2n04EauxiIgCfTfvdKyf1LbWEGilgDaJhvYI5
+N18An3EHeJpvv4hztaMbL5dCMjVcxIsl
+=Dkg6
+-----END PGP SIGNATURE-----
