@@ -1,0 +1,18 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/net-ping/net-ping-2.35.ebuild,v 1.1 2008/10/11 08:45:34 tove Exp $
+
+MODULE_AUTHOR=SMPETERS
+MY_PN=Net-Ping
+MY_P=${MY_PN}-${PV}
+S=${WORKDIR}/${MY_P}
+inherit perl-module
+
+DESCRIPTION="check a remote host for reachability"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE=""
+
+DEPEND="dev-lang/perl"
