@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/net-ping
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/net-ping/ChangeLog,v 1.9 2007/01/19 18:02:35 mcummings Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/net-ping/ChangeLog,v 1.10 2008/10/11 08:45:34 tove Exp $
+
+*net-ping-2.35 (11 Oct 2008)
+
+  11 Oct 2008; Torsten Veller <tove@gentoo.org> +net-ping-2.35.ebuild:
+  Version bump
 
   19 Jan 2007; Michael Cummings <mcummings@gentoo.org> net-ping-2.31.ebuild:
   Ebuild maintenance
